--- a/step.yml
+++ b/step.yml
@@ -15,5 +15,8 @@ toolkit:
   bash:
     entry_file: step.sh
 
-
-
+outputs:
+- BITRISE_CACHE_ENDPOINT:
+  opts:
+    title: Bitrise Cache Endpoint
+    summary: The most ideal Bitrise Build Cache endpoint to be used.
